snapshots/serde/test_suite/tests/ui/enum-representation/test__untagged-and-internal.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 11,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 11,
            end_line: 11,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 1.000,
                    cyclomatic: 1.000,
                    n: 1,
                    cyclomatic_max: 1.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 3,
                    operators: 3,
                    u_operands: 1,
                    operands: 1,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 10,
                        end: 10,
                        unit: fal,
                        sloc_min: 1,
                        sloc_max: 1,
                    },
                    ploc: Ploc {
                        lines: {
                            10,
                        },
                        ploc_min: 1,
                        ploc_max: 1,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 0,
                        lloc_min: 0,
                        lloc_max: 0,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 4.000,
                    halstead_vocabulary: 4.000,
                    halstead_volume: 8.000,
                    cyclomatic: 1.000,
                    sloc: 1.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 2.000,
            cyclomatic: 1.000,
            n: 2,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 7,
            operators: 16,
            u_operands: 10,
            operands: 12,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 11,
                unit: tru,
                sloc_min: 1,
                sloc_max: 1,
            },
            ploc: Ploc {
                lines: {
                    0,
                    10,
                    7,
                    4,
                    8,
                    5,
                    2,
                    6,
                    3,
                },
                ploc_min: 1,
                ploc_max: 1,
            },
            cloc: Cloc {
                only_comment_lines: 0,
                code_comment_lines: 0,
                comment_line_end: None,
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 0,
                lloc_min: 0,
                lloc_max: 0,
            },
            space_count: 2,
            blank_min: 0,
            blank_max: 0,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 28.000,
            halstead_vocabulary: 17.000,
            halstead_volume: 114.449,
            cyclomatic: 2.000,
            sloc: 11.000,
            comments_percentage: 0.000,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
